tests/spec/emit/snapshots/zero_of_enumerated_slice_is_nil_in_every_position.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() -> (EnumeratedSlice<int>, EnumeratedSlice<int>) {
    let xs = zero<EnumeratedSlice<int>>()
    (xs, zero<EnumeratedSlice<int>>())
  }
---
package main

func f() ([]int, []int) {
	var xs []int
	return xs, ([]int)(nil)
}
