tests/spec/emit/snapshots/zero_of_type_parameter.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn empty<T: Zeroable>() -> T {
    zero<T>()
  }
---
package main

func empty[T any]() T {
	return *new(T)
}
