tests/spec/emit/snapshots/zero_of_type_parameter_in_argument_position.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn take<T: Zeroable>(value: T) -> T { value }
  
  fn f<T: Zeroable>() -> T {
    take<T>(zero<T>())
  }
---
package main

func take[T any](value T) T {
	return value
}

func f[T any]() T {
	return take[T](*new(T))
}
