tests/spec/emit/snapshots/zero_of_type_parameter_takes_a_selector.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  interface Speaker { fn Speak() -> string }
  
  fn greet<T: Zeroable + Speaker>() -> string {
    zero<T>().Speak()
  }
---
package main

type Speaker interface {
	Speak() string
}

func greet[T Speaker]() string {
	return (*new(T)).Speak()
}
