tests/spec/emit/snapshots/zero_of_uintptr_carries_its_type.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() -> Unknown {
    zero<uintptr>()
  }
---
package main

func f() any {
	return uintptr(0)
}
