tests/spec/emit/snapshots/zero_of_unit_in_statement_position_is_dropped.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() -> int {
    let _ = zero<()>()
    1
  }
---
package main

func f() int {
	return 1
}
