tests/spec/emit/snapshots/zero_of_unit_is_a_value_not_a_statement.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() {
    let u = zero<()>()
    let _ = u
  }
---
package main

func f() {
	var u struct{}
	_ = u
}
